Test/crash_logs/crash_log_AssertionError_2023-10-13_23-18-00.txt
Error Type: AssertionError
System Information:
System: Windows
Node: DESKTOP-4HHR1F9
Release: 10
Version: 10.0.22621
Machine: AMD64
Processor: AMD64 Family 23 Model 24 Stepping 1, AuthenticAMD
Total RAM: 6323187712 bytes
Available RAM: 512126976 bytes
RAM Usage: 91.9%


Exception Information:
Traceback (most recent call last):
  File "D:\Hackathon\Test\fatal.py", line 62, in generate_random_errors
    assert False, "This is an assertion error."
AssertionError: This is an assertion error.
